Spacing issue at mobile

--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -114,4 +114,12 @@
 
     }
 
+    .button {
+
+        @include touch {
+            margin-bottom: .5rem;    
+        }
+
+    }
+
 }
